--- a/Source/RandoInjector/RandoInjector.vcxproj
+++ b/Source/RandoInjector/RandoInjector.vcxproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="junk.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
